--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-# API_HASH
-# API_ID
-# BOT_TOKEN
+# API_HASH = 6838cc67172f18fe5f302c158ce2fbfa
+# API_ID = 29305295
+# BOT_TOKEN = 7342686334:AAEeATqL8T5p8sFmLk4TtrQAF3XUyfl7n5o
